@@ -1,3 +1,8 @@
+2012-01-23  Valek Filippov <frob@df.ru>
+
+	* Added support for 'Tab'
+	* +Alt in entry to send keys to hexview.
+
 2012-01-22  Valek Filippov <frob@df.ru>
 
 	* Comments improvements
